config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  labels:
    name: ingress-host
spec:
  rules:
  # host: ingress.ruan.dev.com.br
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-server-service
            port: 
              number: 80
